--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href=“https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap” rel=“stylesheet”>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
         <div class="header--title-container">
             <h1>La proxima revolucion en el intercambio de criptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header--button">Conoce nuestros planes <span></span></a>
+            <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -81,11 +82,86 @@
                 </div>
             </section>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparacion.</h2>
+                <p>Confiable y diseñado para su uso diario</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">Nuestra API toma informacion minuto a minuto sobre las tasas que mas determinan el comportamiento</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estas adquiriendo</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="dolar"></span>
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No mas rumores, con Batabid sabras el valor real de cada moneda en el mercado actual</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="check"></span>
+                    <p class="product--card-title">Informacion confiable</p>
+                    <p class="product--card-body">Nuestras fuentes estan 100% verificadas y continuamos auditando su contenido mientras se actualizan</p>
+                </article>
+            </section>
+        </section>
+        <section class="bitcoin-img-container">
+            <h2>Conocelo hoy.</h2>
+        </section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma</p>
+            </div>
+            <section class="plans-container--slider">
+                <article class="plans-container--card">
+                    
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span> 50</p>
+                        <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recomendado">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 99</p>
+                        <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Semanal</h3>
+                        <p class="plan-card--price"><span>$</span> 30</p>
+                        <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="./assets/img/logo-footer.svg" alt="Logo de batatabit 2020">
+        </section class="right">
+    </footer>
 
     <script src="index.js"></script>
 </body>
